# realsense

./: README.md
camera/: CHANGELOG.rst  CMakeLists.txt  package.xml  realsense_camera_nodelet_plugins.xml
camera/cfg/: camera_params.cfg
camera/launch/: realsense_r200_rgbd.launch
camera/launch/includes/: realsense_r200_nodelet.launch.xml
camera/src/: realsense_camera_driver.cpp  realsense_camera_driver.h  realsense_camera_node.cpp  realsense_camera_nodelet.cpp  realsense_camera_nodelet.h
